# pytodotxt

./: .gitignore  pyproject.toml  tox.ini
pytodotxt/: cli.py  config.py  constants.py  tasks.py  todotxt.py
tests/: test_pytodotxt.py  test_todo.py
