[tool.poetry]
name = "pytodotxt"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
colorama = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
ipdb = "^0.11.0"
tox = "^3.7"
pytest-cov = "^2.6"

[tool.poetry.scripts]
todo = "pytodotxt.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
